# playground-nb

./: .gitignore  CLAUDE.md  LICENSE  README.md  mise.toml  playground-nb.code-workspace  pyproject.toml
.claude/: settings.json
.claude/rules/: daft.md  lance.md  plan.md
.claude/skills/create-notebook/: SKILL.md
notebooks/daft/: embeddings_stackexchange.ipynb  embeddings_stackexchange.py  image_color_query.ipynb  image_color_query.py  minhash_dedup_common_crawl.ipynb  minhash_dedup_common_crawl.py  pytorch_dataloader_image.ipynb  pytorch_dataloader_image.py  pytorch_dataloader_tabular.ipynb  pytorch_dataloader_tabular.py  pytorch_dataloader_text.ipynb  pytorch_dataloader_text.py  text_to_image_generation.ipynb  text_to_image_generation.py
notebooks/lance/: clip_multimodal_lance.ipynb  clip_multimodal_lance.py  colpali_vision_retriever.ipynb  colpali_vision_retriever.py  lance_huggingface_hub.ipynb  lance_huggingface_hub.py
plan/: 001-pytorch-dataloader-tutorial.md  002-daft-tutorials-port.md  003-lance-multimodal-ml.md  004-lance-huggingface-hub.md
plans/: 001-pytorch-dataloader-tutorial.md
projects/daft/: .gitignore  mise.toml  pyproject.toml
projects/daft/docs/: pytorch-dataloader-extended.md
projects/daft/notebooks/: pytorch_dataloader_tabular.ipynb  pytorch_dataloader_tabular.py
projects/daft/plan/: 001-pytorch-dataloader-tutorial.md
