[project]
name = "playground-nb"
version = "0.1.0"
description = "Notebook playground for exploring data engineering and ML topics"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=7.2",
    "jupytext>=1.19",
    "nbstripout>=0.9",
    "ruff>=0.15",
    "ty>=0.0.24",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.ruff.lint.per-file-ignores]
"notebooks/**/*.py" = ["E402"]

[tool.ty.environment]
root = ["notebooks/"]
